@@ -1,5 +1,10 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 01/21/2015 ==
+Uleat: Added `light` field to npctypes load query (all six clients tested positive for functionality.)
+Note: This only affects 'innate' light. Equipment (other) light is still in-work.
+Optional SQL: utils/sql/git/optional/2015_01_21_NPC_Types_Light_Field_Primer.sql
+
 == 01/20/2015 ==
 Uleat: Fix for Inventory::_HasItemByUse(bucket) using the parent container when searching for bag container items.
 
